Adicionando o reset.css e implementando estilizações no style.css

--- a/style.css
+++ b/style.css
@@ -7,4 +7,10 @@
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    background-color: linear-gradient(300deg, #757b87, #909d9d);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
 }
