--- a/style.css
+++ b/style.css
@@ -14,3 +14,29 @@ body {
     min-height: 100vh;
     flex-direction: column;
 }
+
+input{
+    padding: 1rem;
+    border-radius: 25px;
+    border: none;
+    background-color: #fff;
+    font-family: inherit;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    min-width: 300px;
+    font-size: 1rem;
+}
+
+input:focus {
+    outline: none;
+}
+
+.clima {
+    text-align: center;
+    font-size: 2rem;
+}
+
+.clima h2 {
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+}
