--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ input:focus{
 }
 
 footer {
-  background: rgba(0,0,0,0.3);
+  background: #0d1137;
+  color: #fff;
   text-align: center;
   position: absolute;
   width: 100%;
