--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body{  
    margin: 0;  
    font-family: "Poppins", sans-serif;  
-   background-color:#e52165;  
+   background-color:#84fa84;  
    display: flex;  
    justify-content: center;  
    align-items: center;  
