--- a/style.css
+++ b/style.css
@@ -1,39 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');  
  *{  
-   box-sizing: border-box;  
- }  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; 
+ }
+
  body{  
-   margin: 0;  
-   font-family: "Poppins", sans-serif;  
-   background-color: linear-gradiet(300deg, #757b87, #909d9d);  
-   display: flex;  
-   justify-content: center;  
-   align-items: center;  
-   min-height: 100vh;  
-   flex-direction: column;  
+  align-items: center;  
+  background-color: linear-gradiet(300deg, #757b87, #909d9d);  
+  display: flex;  
+  font-family: "Poppins", sans-serif;  
+  flex-direction: column;  
+  justify-content: center;  
+  margin: 0;
+  padding: 4rem 0;  
+  min-height: 100vh;  
  }  
+
  input{  
-   padding: 1rem;  
-   border-radius: 25px;  
-   border: none;  
-   background-color: #fff;  
-   font-family: inherit;  
-   box-shadow: 0 4px 10px rgba(0,0,0,0.2);  
-   min-width: 300px;  
-   font-size: 1rem;  
+  background-color: #fff;  
+  border: none;  
+  border-radius: 25px;  
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);  
+  font-family: inherit;  
+  font-size: 1rem;  
+  margin: 0;
+  min-width: 300px;  
+  padding: 1rem;  
  }  
+
+ h1, h2, h3, h4, img, p, span, small { 
+  margin: 0;
+  padding: 0;
+ }
+
  input:focus{  
-   outline: none;  
- }  
- .weather{  
-   text-align: center;  
-   font-size: 2rem ;  
- }  
- .weather h2{  
-   margin-bottom: 0;  
-   display: flex;  
-   align-items: center;  
- }  
- /* .weather img{  
-   transform: scale(2);  
- } */  
+  outline: none;  
+ }
+
+.weather {
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.main__city--name {
+  font-size: 3rem;
+  margin-top: 1rem;
+}
+
+.main__weather--icon {
+  margin-top: -1.5rem;
+}
+
+.main__temperature {
+  align-self: center;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+ 
+.main__weather {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: -1.5rem;
+}
+
+.main__error {
+  font-size: 2.5rem;
+  margin-top: 3rem;
+}
