--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@
   flex-direction: column;  
   justify-content: center;  
   margin: 0;
-  padding: 4rem 0;  
   min-height: 100vh;  
+  padding: 4rem 0;
+  position: relative;  
  }  
 
  input{  
@@ -44,6 +45,7 @@
 .weather {
   text-align: center;
   font-size: 1.5rem;
+  margin-bottom: 3rem;
 }
 
 .main__city--name {
@@ -70,6 +72,7 @@
 .main__error {
   font-size: 2.5rem;
   margin-top: 3rem;
+  text-align: center;
 }
 
 .footer {
